Fixed some layout issues (buttons were not wide enough anymore).

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,10 @@ p {
 	margin: 0 auto;
 }
 
+.btn-group-wide {
+	width: 100%;
+}
+
 .carousel {
 	border: 1px solid #D3D7CF;
 }
